--- a/barberShop/barberShop.csproj
+++ b/barberShop/barberShop.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="Npgsql" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
